# workspaceTdRos

./: .gitignore  README.md  read_bag.py
rosbag2_2024_02_14-16_17_42/: metadata.yaml
rosbag2_2024_02_16-14_17_44/: metadata.yaml
src/td1/: CMakeLists.txt  README.md  package.xml
src/td1/src/: main_nodeA.cpp  main_nodeB.cpp  test.cpp
src/td2/: CMakeLists.txt  README.md  package.xml
src/td2/config/: td2.yaml
src/td2/include/td2/: NodeCible.hpp  NodeControl.hpp  NodeSimu.hpp  NodeTourelle.hpp
src/td2/launch/: td2_launch.py
src/td2/meshes/: turret.dae
src/td2/src/: NodeCible.cpp  NodeControl.cpp  NodeSimu.cpp  NodeSimu.hpp  NodeTourelle.cpp  main_NC.cpp  main_NCi.cpp  main_NT.cpp  td2.cpp
